[PACA-636] Abstract common functions, add tests